--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <body>
 
         <div>
-            <center><button>DOAR</button></center> <br>
-            <center><img id="pc" src="pc.png" alt="icone pc"></center><br>
-            <center><button>RECEBER</button></center>
+            <button>DOAR</button> <br>
+            <img id="pc" src="pc.png" alt="icone pc"><br>
+            <button>RECEBER</button>
         </div>
 
 
