--- a/index.html
+++ b/index.html
@@ -11,19 +11,30 @@
     </head>
 
     <body>
-        <div id="bg"></div>
 
-        <div class="top-left corner"></div>
-        <div class="top-right corner"></div>
-        <div class="bottom-left corner"></div>
-        <div class="bottom-right corner"></div>
+        <div class="background"></div>
 
-        <div id="menu">
-            <button id="button">DOAR</button> <br>
-            <img id="pc" src="images/pc-icon.png" alt="icone pc"><br>
-            <button id="button">RECEBER</button>
+        <nav class="sidenav">
+            <a href="#">Perfil</a>
+            <a href="#">Doações</a>
+            <a href="#">Configurações</a>
+            <a href="#">Suporte</a>
+            <a href="#">Quem somos</a>
+        </nav>
+
+        <div id="main">
+
+            <div class="top-left corner"></div>
+            <div class="top-right corner"></div>
+            <div class="bottom-left corner"></div>
+            <div class="bottom-right corner"></div>
+
+            <section class="center-block">
+                <button class="round-button">DOAR</button>
+                <img src="images/pc-icon.png" alt="icone pc">
+                <button class="round-button">RECEBER</button>
+            </section>
         </div>
-
     </body>
 
 </html>
