--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <div class="bottom-right corner"></div>
 
             <section class="center-block">
-                <button class="round-button">DOAR</button>
+                <a href="#" class="round-button">DOAR</a>
                 <img src="images/pc-icon.png" alt="icone pc">
-                <button class="round-button">RECEBER</button>
+                <a href="#" class="round-button">RECEBER</a>
             </section>
         </div>
     </body>
