--- a/index.html
+++ b/index.html
@@ -12,28 +12,26 @@
 
     <body>
 
-        <div class="background"></div>
+        <div class="App">
+            <div class="background"></div>
 
-        <nav class="sidenav">
-            <a href="#">Perfil</a>
-            <a href="#">Doações</a>
-            <a href="#">Configurações</a>
-            <a href="#">Suporte</a>
-            <a href="#">Quem somos</a>
-        </nav>
-
-        <div id="main">
-
+            <!-- <nav class="sidenav">
+                    <a href="#">Perfil</a>
+                    <a href="#">Doações</a>
+                    <a href="#">Configurações</a>
+                    <a href="#">Suporte</a>
+                    <a href="#">Quem somos</a>
+                </nav> -->
             <div class="top-left corner"></div>
             <div class="top-right corner"></div>
             <div class="bottom-left corner"></div>
             <div class="bottom-right corner"></div>
 
-            <section class="center-block">
+            <div class="center-box">
                 <a href="#" class="round-button">DOAR</a>
                 <img src="images/pc-icon.png" alt="icone pc">
                 <a href="#" class="round-button">RECEBER</a>
-            </section>
+            </div>
         </div>
     </body>
 
