--- a/index.html
+++ b/index.html
@@ -15,22 +15,25 @@
         <div class="App">
             <div class="background"></div>
 
-            <!-- <nav class="sidenav">
-                    <a href="#">Perfil</a>
-                    <a href="#">Doações</a>
-                    <a href="#">Configurações</a>
-                    <a href="#">Suporte</a>
-                    <a href="#">Quem somos</a>
-                </nav> -->
-            <div class="top-left corner"></div>
-            <div class="top-right corner"></div>
-            <div class="bottom-left corner"></div>
-            <div class="bottom-right corner"></div>
+            <nav class="sidenav">
+                <a href="#">Perfil</a>
+                <a href="#">Doações</a>
+                <a href="#">Configurações</a>
+                <a href="#">Suporte</a>
+                <a href="#">Quem somos</a>
+            </nav>
 
-            <div class="center-box">
-                <a href="#" class="round-button">DOAR</a>
-                <img src="images/pc-icon.png" alt="icone pc">
-                <a href="#" class="round-button">RECEBER</a>
+            <div class="main">
+                <div class="top-left corner"></div>
+                <div class="top-right corner"></div>
+                <div class="bottom-left corner"></div>
+                <div class="bottom-right corner"></div>
+
+                <div class="center-box">
+                    <a href="#" class="round-button">DOAR</a>
+                    <img src="images/pc-icon.png" alt="icone pc">
+                    <a href="#" class="round-button">RECEBER</a>
+                </div>
             </div>
         </div>
     </body>
