--- a/doador.html
+++ b/doador.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home | Conectandus</title>
+        <title>Doador | Conectandus</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
             integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
     </head>
 
     <body>
+
+        <div class="background"></div>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -41,32 +44,6 @@
                 <img src="/images/ione-perfil.png" alt="">
             </div>
         </nav>
-
-        <div class="App">
-
-            <div class="background"></div>
-            <div class="top-left corner"></div>
-            <div class="top-right corner"></div>
-            <div class="bottom-left corner"></div>
-            <div class="bottom-right corner"></div>
-
-
-
-            <div class="main">
-                <a href="/doador.html" class="round-button">DOAR</a>
-                <img src="images/pc-icon.png" alt="icone pc">
-                <a href="#" class="round-button">RECEBER</a>
-            </div>
-
-            <!-- <nav class="sidenav">
-                <a href="#">Perfil</a>
-                <a href="#">Doações</a>
-                <a href="#">Configurações</a>
-                <a href="#">Suporte</a>
-                <a href="#">Quem somos</a>
-            </nav> -->
-
-        </div>
 
         <!-- jQuery and JS bundle w/ Popper.js -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
