--- a/doador.html
+++ b/doador.html
@@ -45,6 +45,16 @@
             </div>
         </nav>
 
+        <div class="App">
+            <div class="main">
+                <h1 class="titulo">Você escolheu doar!</h1>
+                <h3 class="titulo">Como gostaria de ajudar?</h3>
+                <a href="#" class="round-button">EQUIPAMENTO</a>
+                <a href="#" class="round-button">FRETAGEM</a>
+                <a href="#" class="round-button">APOIAR</a>
+            </div>
+        </div>
+
         <!-- jQuery and JS bundle w/ Popper.js -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
