--- a/candidato.html
+++ b/candidato.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Doar | Conectandus</title>
+        <title>Receber | Conectandus</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
             integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -47,11 +47,34 @@
 
         <div class="App">
             <div class="main">
-                <h1 class="titulo">Você escolheu doar!</h1>
-                <h3 class="titulo">Como gostaria de ajudar?</h3>
-                <a href="#" class="round-button">EQUIPAMENTO</a>
-                <a href="#" class="round-button">FRETAGEM</a>
-                <a href="#" class="round-button">APOIAR</a>
+                <h1 class="titulo">Você escolheu Receber Doação!</h1>
+                <h3 class="titulo">Agora só falta um pouquinho</h3>
+
+
+                <label for="id_motivo" class="label">
+                    Descreva brevemente o motivo da solitação:
+                </label>
+                <input type="text" name="motivo" id="id_motivo">
+
+                <p class="label">Informe o dispositivo que deseja, selecione de 1 até 3, apenas o primeiro dos
+                    assinalados
+                    que for disponibilizado será entregue:
+                </p>
+
+                <label class="container" for="id_desktop">Computador Desktop
+                    <input type="checkbox" name="desktop" id="id_desktop" value="Computador Desktop">
+                    <span class="checkmark"></span>
+                </label>
+                <label class="container" for="id_laptop">Laptop
+                    <input type="checkbox" name="laptop" id="id_laptop" value="Laptop">
+                    <span class="checkmark"></span>
+                </label>
+                <label class="container">Smatphone
+                    <input type="checkbox" name="smartphone" id="id_smartphone" value="Smartphone">
+                    <span class="checkmark"></span>
+                </label>
+
+                <input type="submit" value="Finalizar pedido" class="round-button">
             </div>
         </div>
 
