--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home | Conectandus</title>
+        <title>Inicio | Conectandus</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
             integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -55,7 +55,7 @@
             <div class="main">
                 <a href="/doador.html" class="round-button">DOAR</a>
                 <img src="images/pc-icon.png" alt="icone pc">
-                <a href="#" class="round-button">RECEBER</a>
+                <a href="/candidato.html" class="round-button">RECEBER</a>
             </div>
 
             <!-- <nav class="sidenav">
