--- a/candidato.html
+++ b/candidato.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
     <head>
         <meta charset="UTF-8">
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="#">Configurações</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Suporte</a>
+                        <a class="nav-link" href="/suporte.html">Suporte</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Quem Somos</a>
