--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="#">Configurações</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Suporte</a>
+                        <a class="nav-link" href="/suporte.html">Suporte</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Quem Somos</a>
