--- a/cadastro1.html
+++ b/cadastro1.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Receber | Conectandus</title>
+        <title>Cadastro | Conectandus</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
             integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -47,21 +47,37 @@
 
         <div class="App">
             <div class="main">
-                <h1 class="titulo">Você escolheu Receber Doação!</h1>
-                <h3 class="titulo">Agora só falta um pouquinho</h3>
+                <h1 class="titulo">Seja bem vindo ao Conectandus!</h1>
+                <h3 class="titulo">Para começar precisamos criar uma conta:</h3>
 
-                <form action="#">
+                <form action="/cadastro3.html" method="GET">
 
-                    <label for="id_motivo" class="label">
-                        Descreva brevemente o motivo da solitação:
+                    <label for="id_nome" class="label">
+                        Seu nome:
                     </label>
-                    <input type="text" name="motivo" id="id_motivo">
+                    <input type="text" name="nome" id="id_nome" placeholder="Escreva seu nome completo...">
 
-                    <p class="label">Informe o dispositivo que deseja, selecione de 1 até 3, apenas o primeiro dos
+                    <label for="id_cpf" class="label">
+                        CPF: (Apenas números)
+                    </label>
+
+                    <input type="text" name="telefone" id="id_telefone" placeholder="Ex: 11122233396">
+
+                    <label for="id_telefone" class="label">
+                        Telefone para contato:
+                    </label>
+
+                    <input type="text" name="telefone" id="id_telefone" placeholder="Ex: 67991234567">
+
+                    <label for="id_cpf" class="label">
+                        Data de nascimento:
+                    </label>
+                    <input type="date" name="data_nascimento" id="id_data_nascimento">
+                    <!-- <p class="label">Informe o dispositivo que deseja, selecione de 1 até 3, apenas o primeiro dos
                         assinalados
                         que for disponibilizado será entregue:
-                    </p>
-
+                    </p> -->
+                    <!-- 
                     <label class="container" for="id_desktop">Computador Desktop
                         <input type="checkbox" name="desktop" id="id_desktop" value="Computador Desktop">
                         <span class="checkmark"></span>
@@ -73,9 +89,9 @@
                     <label class="container">Smatphone
                         <input type="checkbox" name="smartphone" id="id_smartphone" value="Smartphone">
                         <span class="checkmark"></span>
-                    </label>
+                    </label> -->
 
-                    <input type="submit" value="Finalizar pedido" class="round-button">
+                    <input type="submit" value="Próximo passo" class="round-button">
 
                 </form>
 
@@ -89,6 +105,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
             crossorigin="anonymous"></script>
+
     </body>
 
 </html>
