--- a/cadastro2.html
+++ b/cadastro2.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Receber | Conectandus</title>
+        <title>Cadastro | Conectandus</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
             integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -47,21 +47,43 @@
 
         <div class="App">
             <div class="main">
-                <h1 class="titulo">Você escolheu Receber Doação!</h1>
-                <h3 class="titulo">Agora só falta um pouquinho</h3>
+                <h1 class="titulo">Seja bem vindo ao Conectandus!</h1>
+                <h3 class="titulo">Agora precisamos de alguns dados sobre o seu endereço:</h3>
 
-                <form action="#">
+                <form action="/cadastro3.html" method="GET">
 
-                    <label for="id_motivo" class="label">
-                        Descreva brevemente o motivo da solitação:
+                    <label for="id_cep" class="label">
+                        CEP: (Apenas números)
                     </label>
-                    <input type="text" name="motivo" id="id_motivo">
+                    <input type="text" name="cep" id="id_cep" placeholder="Ex: 79043080">
 
-                    <p class="label">Informe o dispositivo que deseja, selecione de 1 até 3, apenas o primeiro dos
+                    <label for="id_cidade" class="label">
+                        Cidade:
+                    </label>
+                    <input type="text" name="cidade" id="id_cidade" value="Campo Grande" disabled>
+
+                    <label for="id_bairro" class="label">
+                        Bairro:
+                    </label>
+
+                    <input type="text" name="bairro" id="id_bairro" placeholder="Ex: Tiradentes">
+
+                    <label for="id_cpf" class="label">
+                        Endereço:
+                    </label>
+                    <input type="text" name="endereco" id="id_endereco" placeholder="Ex: Rua dos Dentistas, 392">
+
+                    <label for="id_cpf" class="label">
+                        Complemento:
+                    </label>
+                    <input type="text" name="complemento" id="id_complemento"
+                        placeholder="Ex: Bloco A, Apartamento 505">
+
+                    <!-- <p class="label">Informe o dispositivo que deseja, selecione de 1 até 3, apenas o primeiro dos
                         assinalados
                         que for disponibilizado será entregue:
-                    </p>
-
+                    </p> -->
+                    <!-- 
                     <label class="container" for="id_desktop">Computador Desktop
                         <input type="checkbox" name="desktop" id="id_desktop" value="Computador Desktop">
                         <span class="checkmark"></span>
@@ -73,9 +95,9 @@
                     <label class="container">Smatphone
                         <input type="checkbox" name="smartphone" id="id_smartphone" value="Smartphone">
                         <span class="checkmark"></span>
-                    </label>
+                    </label> -->
 
-                    <input type="submit" value="Finalizar pedido" class="round-button">
+                    <input type="submit" value="Próximo passo" class="round-button">
 
                 </form>
 
@@ -89,6 +111,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
             crossorigin="anonymous"></script>
+
     </body>
 
 </html>
