--- a/cadastro3.html
+++ b/cadastro3.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Receber | Conectandus</title>
+        <title>Cadastro | Conectandus</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
             integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -47,35 +47,28 @@
 
         <div class="App">
             <div class="main">
-                <h1 class="titulo">Você escolheu Receber Doação!</h1>
-                <h3 class="titulo">Agora só falta um pouquinho</h3>
+                <h1 class="titulo">Seja bem vindo ao Conectandus!</h1>
+                <h3 class="titulo">Falta pouco! Agora precisamos dos seus dados de login:</h3>
 
-                <form action="#">
+                <form action="#" method="GET">
 
-                    <label for="id_motivo" class="label">
-                        Descreva brevemente o motivo da solitação:
+                    <label for="id_email" class="label">
+                        E-Mail:
                     </label>
-                    <input type="text" name="motivo" id="id_motivo">
+                    <input type="email" name="email" id="id_email" placeholder="Ex: rogerperes@exemplo.com">
 
-                    <p class="label">Informe o dispositivo que deseja, selecione de 1 até 3, apenas o primeiro dos
-                        assinalados
-                        que for disponibilizado será entregue:
-                    </p>
+                    <label for="id_senha" class="label">
+                        Senha:
+                    </label>
+                    <input type="password" name="senha" id="id_senha" placeholder="Crie uma senha forte...">
 
-                    <label class="container" for="id_desktop">Computador Desktop
-                        <input type="checkbox" name="desktop" id="id_desktop" value="Computador Desktop">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="container" for="id_laptop">Laptop
-                        <input type="checkbox" name="laptop" id="id_laptop" value="Laptop">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="container">Smatphone
-                        <input type="checkbox" name="smartphone" id="id_smartphone" value="Smartphone">
-                        <span class="checkmark"></span>
+                    <label for="id_senhac" class="label">
+                        Confirmar senha:
                     </label>
 
-                    <input type="submit" value="Finalizar pedido" class="round-button">
+                    <input type="password" name="senhac" id="id_senhac" placeholder="Repita a senha">
+
+                    <input type="submit" value="Cadastrar" class="round-button">
 
                 </form>
 
@@ -89,6 +82,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
             crossorigin="anonymous"></script>
+
     </body>
 
 </html>
