--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cadastro | Conectandus</title>
+        <title>Login | Conectandus</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
             integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -48,50 +48,21 @@
         <div class="App">
             <div class="main">
                 <h1 class="titulo">Seja bem vindo ao Conectandus!</h1>
-                <h3 class="titulo">Para começar precisamos criar uma conta:</h3>
+                <h3 class="titulo">Insira os seus dados de login:</h3>
 
-                <form action="/cadastro2.html" method="GET">
+                <form action="#" method="GET">
 
-                    <label for="id_nome" class="label">
-                        Seu nome:
+                    <label for="id_email" class="label">
+                        E-Mail:
                     </label>
-                    <input type="text" name="nome" id="id_nome" placeholder="Escreva seu nome completo...">
+                    <input type="email" name="email" id="id_email" placeholder="Ex: rogerperes@exemplo.com">
 
-                    <label for="id_cpf" class="label">
-                        CPF: (Apenas números)
+                    <label for="id_senha" class="label">
+                        Senha:
                     </label>
+                    <input type="password" name="senha" id="id_senha" placeholder="Insira sua senha">
 
-                    <input type="text" name="telefone" id="id_telefone" placeholder="Ex: 11122233396">
-
-                    <label for="id_telefone" class="label">
-                        Telefone para contato:
-                    </label>
-
-                    <input type="text" name="telefone" id="id_telefone" placeholder="Ex: 67991234567">
-
-                    <label for="id_cpf" class="label">
-                        Data de nascimento:
-                    </label>
-                    <input type="date" name="data_nascimento" id="id_data_nascimento">
-                    <!-- <p class="label">Informe o dispositivo que deseja, selecione de 1 até 3, apenas o primeiro dos
-                        assinalados
-                        que for disponibilizado será entregue:
-                    </p> -->
-                    <!-- 
-                    <label class="container" for="id_desktop">Computador Desktop
-                        <input type="checkbox" name="desktop" id="id_desktop" value="Computador Desktop">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="container" for="id_laptop">Laptop
-                        <input type="checkbox" name="laptop" id="id_laptop" value="Laptop">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="container">Smatphone
-                        <input type="checkbox" name="smartphone" id="id_smartphone" value="Smartphone">
-                        <span class="checkmark"></span>
-                    </label> -->
-
-                    <input type="submit" value="Próximo passo" class="round-button">
+                    <input type="submit" value="Cadastrar" class="round-button">
 
                 </form>
 
