--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
                     </label>
                     <input type="password" name="senha" id="id_senha" placeholder="Insira sua senha">
 
-                    <input type="submit" value="Cadastrar" class="round-button">
+                    <input type="submit" value="Entrar" class="round-button">
 
                 </form>
 
